--- a/internals/generators/component/test.js.hbs
+++ b/internals/generators/component/test.js.hbs
@@ -20,8 +20,7 @@ import {{ properCase name }} from '../index';
 import { DEFAULT_LOCALE } from '../../../i18n';
 {{/if}}
 
-describe('
-<{{ properCase name }} />', () => {
+describe('<{{ properCase name }} />', () => {
 it('Expect to not log errors in console', () => {
 const spy = jest.spyOn(global.console, 'error');
 
